
syntax = "proto3";

package pb;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


// The heart beat service definition.
service Heart {
  // Sends a heart beat
  rpc HeartBeat (HeartRequest) returns (HeartReply) {}
}

message HeartRequest {
}

message HeartReply {
  string message = 1;
}

